--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -7,7 +7,15 @@
   <div class="form-group">
     <%= f.number_field :price, placeholder: "Price" %>
   </div>
-  <div class="form-group">
+  
+  <%= check_box_tag(:Books) %>
+  <%= label_tag(:Books, "I own a book") %>
+
+  <%= check_box_tag(:Toys) %>
+  <%= label_tag(:Toys, "I own a toy") %>
+
+  <%= check_box_tag(:Home) %>
+  <%= label_tag(:Home, "I own the home") %>
 
 
 <%= f.submit "submit" %>
