--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,23 +1,20 @@
 <h1>Product</h1>
 
-<%=  form_for @product do |f|%>
-  <div class="form-group">
-    <%= f.text_field :name, placeholder: "Product Name" %>
-  </div>
-  <div class="form-group">
-    <%= f.number_field :price, placeholder: "Price" %>
-  </div>
+<%= form_for (@product) do |f| %>
+  
+  <%= f.text_field :name, placeholder: "Product Name" %>
+  <%= f.number_field :price, placeholder: "Price" %>
+  
+  <%= check_box_tag(:Books) %>
+  <%= label_tag(:Books, "book") %>
 
-<%= check_box_tag(:Books) %>
-<%= label_tag(:Books, "I own a book") %>
+  <%= check_box_tag(:Toys) %>
+  <%= label_tag(:Toys, "toy") %>
 
-<%= check_box_tag(:Toys) %>
-<%= label_tag(:Toys, "I own a toy") %>
+  <%= check_box_tag(:Home) %>
+  <%= label_tag(:Home, "home") %>
 
-<%= check_box_tag(:Home) %>
-<%= label_tag(:Home, "I own the home") %>
 
-<%= f.submit "submit" %>
+  <%= f.submit "submit" %>
 
 <% end %>
-
